<resources>
    <string name="app_name">Fintuga Expanse Manager</string>
    <string name="admob_app_id" translatable="false">ca-app-pub-1008697854220934~3466821655</string>
    <string name="bannerId" translatable="false">ca-app-pub-1008697854220934/1360012962</string>
    <string name="nativeId" translatable="false">ca-app-pub-1008697854220934/8663787910</string>
    <string name="interstitialId" translatable="false">ca-app-pub-1008697854220934/6809201649</string>
    <string name="appOpenId" translatable="false">ca-app-pub-1008697854220934/9785297897</string>
    <string name="rewardId" translatable="false">ca-app-pub-1008697854220934/8911199922</string>
    <string name="color_expens_acc_loan" translatable="false">\#00bcd4</string>
    <string name="color_expens_donation" translatable="false">\#2196f3</string>
    <string name="color_expens_fees" translatable="false">\#3f51b5</string>
    <string name="color_expens_food" translatable="false">\#03a9f4</string>
    <string name="color_expens_groceries" translatable="false">\#f44336</string>
    <string name="color_expens_medical" translatable="false">\#009688</string>
    <string name="color_expens_rent" translatable="false">\#e91e63</string>
    <string name="color_expens_shopping" translatable="false">\#673ab7</string>
    <string name="color_expens_transportation" translatable="false">\#9c27b0</string>
    <string name="color_income_coupon" translatable="false">\#FFCC00</string>
    <string name="color_income_income_from_rent" translatable="false">\#8bc34a</string>
    <string name="color_income_interest" translatable="false">\#cddc39</string>
    <string name="color_income_pension" translatable="false">\#ffeb3b</string>
    <string name="color_income_salary" translatable="false">\#4caf50</string>
    <string name="color_income_tax_return" translatable="false">\#ff9800</string>
    <string name="color_income_work_on_demand" translatable="false">\#ffc107</string>
    <string name="currency">Currency</string>
    <string name="about_us">About Us</string>
    <string name="action_cancel">CANCEL</string>
    <string name="action_go_settings">GOTO SETTINGS</string>
    <string name="action_got_it">Got It</string>
    <string name="action_no">NO</string>
    <string name="action_ok">OK</string>
    <string name="action_re_login">Re-login</string>
    <string name="action_retry">RE-TRY</string>
    <string name="action_settings">Settings</string>
    <string name="action_update">UPDATE</string>
    <string name="action_yes">YES</string>
    <string name="ad">AD</string>
    <string name="addExpense_hint">There is no transactions to show, Please add your transactions.</string>
    <string name="add_categories">Add Categories</string>
    <string name="add_unlimited_income_expense_categories">Add unlimited income / expense categories</string>
    <string name="add_unlimited_number_of_banks">Add unlimited number of banks</string>
    <string name="ads_free">ADs free</string>
    <string name="ads_free_exp">ADS</string>
    <string name="alert">Alert</string>
    <string name="all_country_currency_conversions">All Country Currency Conversions</string>
    <string name="amount">Amount*</string>
    <string name="amount_in_currency">Amount in Different Currency</string>
    <string name="annual_interest_rate">Annual Interest rate*</string>
    <string name="folderName">Expanse Manager</string>
    <string name="apr_2019">April2019</string>
    <string name="are_you_eligible">Are you Eligible for the Loan</string>
    <string name="atm_finder">Atm Finder</string>
    <string name="bank_calc">Banking Calculations</string>
    <string name="bank_finder">Bank Finder</string>
    <string name="banking_calculations">Banking Calculations:</string>
    <string name="be_the_kind">"Be the king of your app
without any distraction
of ads and pop ups"</string>
    <string name="blance">Balance</string>
    <string name="bottomsheet_action_expand_halfway">Expand halfway</string>
    <string name="btn_create_account">Create Account</string>
    <string name="calc">Calculate</string>
    <string name="category_wise_summary">Category Wise Summary</string>
    <string name="chip_text">Chip text</string>
    <string name="chooseplan">Choose a plan</string>
    <string name="clear_text_end_icon_content_description">Clear text</string>
    <string name="colorpicker_dialog_cancel">CANCEL</string>
    <string name="colorpicker_dialog_ok">ADD</string>
    <string name="colorpicker_dialog_title">Choose Color</string>
    <string name="compare">Compare Loan</string>
    <string name="compare_loans">Compare Loans</string>
    <string name="compound_in">Simple &amp; Compound</string>
    <string name="con">Continue</string>
    <string name="congratulations">"Congratulations! Now you can access all premium features for 24Hrs"</string>
    <string name="connect_internet">Connect to Internet</string>
    <string name="convert">CONVERT</string>
    <string name="convert_pdf">Convert PDF</string>
    <string name="currency_amount">Currency of the Amount</string>
    <string name="currency_conversion">Currency Conversion</string>
    <string name="currency_converter">Currency Conversion</string>
    <string name="currency_rate">1 %1$s = %2$s %3$s</string>
    <string name="currency_symbol">Currency Symbol</string>
    <string name="currencyreward">Watch Video AD to access currency converter</string>
    <string name="date_12_jan_2021">Date: 12 Jan 2021</string>
    <string name="date_of_sip">Date of SIP:</string>
    <string name="date_of_swp">Date of SWP:</string>
    <string name="days">3 days free trial</string>
    <string name="difference">Difference :</string>
    <string name="discount">save</string>
    <string name="emi">EMI</string>
    <string name="emi_calc">Financial Calculator</string>
    <string name="emi_calculator">EMI Calculator</string>
    <string name="emi_for">EMI you are eligible for</string>
    <string name="emi_loan">Emi of the loan</string>
    <string name="emi_monthly">EMI (Monthly Payement)</string>
    <string name="end_date">End Date</string>
    <string name="enter_amount">Enter Amount</string>
    <string name="enter_bank_name">Enter Bank Name</string>
    <string name="enter_currency">Enter Currency</string>
    <string name="enteramount">Enter Amount</string>
    <string name="entercurrency">Enter Currency</string>
    <string name="equity">Equity Linked Saving</string>
    <string name="error_icon_content_description">Error</string>
    <string name="exit">Are you sure want to exit ?</string>
    <string name="exp_rate">Expected Rate of Interest*</string>
    <string name="expense">EXPENSE</string>
    <string name="expense_manager">Expense Manager</string>
    <string name="exposed_dropdown_menu_content_description">Show dropdown menu</string>
    <string name="fab_transformation_scrim_behavior">com.google.android.material.transformation.FabTransformationScrimBehavior</string>
    <string name="fab_transformation_sheet_behavior">com.google.android.material.transformation.FabTransformationSheetBehavior</string>
    <string name="facebook_application_id" />
    <string name="facebook_login_protocol_scheme" />
    <string name="fcm_fallback_notification_channel_label">Miscellaneous</string>
    <string name="fd">FD</string>
    <string name="find_places">Find Places</string>
    <string name="first_emi">First EMI:</string>
    <string name="for_latest">For latest Calculation</string>
    <string name="freeexperience">Free Experience</string>
    <string name="friday">Fri</string>
    <string name="fui_accessibility_logo">App logo</string>
    <string name="fui_auto_verified">Phone number automatically verified</string>
    <string name="fui_button_text_save">Save</string>
    <string name="fui_button_text_send">Send</string>
    <string name="fui_cancel">Cancel</string>
    <string name="fui_confirm_recovery_body">Follow the instructions sent to %1$s to recover your password.</string>
    <string name="fui_continue">Continue</string>
    <string name="fui_default_toolbar_title">@string/app_name</string>
    <string name="fui_email_account_creation_error">Email account registration unsuccessful</string>
    <string name="fui_email_field_name">email_field</string>
    <string name="fui_email_hint">Email</string>
    <string name="fui_email_link_confirm_email_header">Confirm email</string>
    <string name="fui_email_link_confirm_email_message">Confirm email to continue sign in</string>
    <string name="fui_email_link_cross_device_linking_text">"You originally intended to connect %1$s to your email account but have opened the link on a different device where you are not signed in.

If you still want to connect your %1$s account, open the link on the same device where you started sign-in. Otherwise, tap Continue to sign-in on this device."</string>
    <string name="fui_email_link_cross_device_sign_in_button_text">Sign in with %1$s</string>
    <string name="fui_email_link_different_anonymous_user_header">Session ended</string>
    <string name="fui_email_link_different_anonymous_user_message">The session associated with this sign-in request has either expired or was cleared.</string>
    <string name="fui_email_link_dismiss_button">Dismiss</string>
    <string name="fui_email_link_email_sent">A sign-in email with additional instructions was sent to %1$s. Check your email to complete sign-in.</string>
    <string name="fui_email_link_header">"Sign-in email sent
"</string>
    <string name="fui_email_link_invalid_link_header">Unable to complete sign in</string>
    <string name="fui_email_link_invalid_link_message">The action code is invalid. This can happen if the code is malformed, expired, or has already been used.</string>
    <string name="fui_email_link_resend">Resend</string>
    <string name="fui_email_link_trouble_getting_email_header">Trouble getting email?</string>
    <string name="fui_email_link_trouble_getting_email_resend_solution">"If the steps above didn't work, you can resend the email. Note that this will deactivate the link in the older email."</string>
    <string name="fui_email_link_trouble_getting_possible_fixes">"Try these common fixes:
• Check if the email was marked as spam or filtered.
• Check your internet connection.
• Check that you did not misspell your email.
• Check that your inbox space is not running out or other inbox setting related issues.
"</string>
    <string name="fui_email_link_wrong_device_header">New device or browser detected.</string>
    <string name="fui_email_link_wrong_device_message">Try opening the link using the same device or browser where you started the sign-in process.</string>
    <string name="fui_enter_confirmation_code">Enter the 6-digit code we sent to</string>
    <string name="fui_error_email_does_not_exist">"That email address doesn't match an existing account"</string>
    <string name="fui_error_invalid_password">Incorrect password.</string>
    <string name="fui_error_quota_exceeded">There was a problem verifying your phone number</string>
    <string name="fui_error_session_expired">This code is no longer valid</string>
    <string name="fui_error_too_many_attempts">This phone number has been used too many times</string>
    <string name="fui_error_unknown">An unknown error occurred.</string>
    <string name="fui_idp_name_email">Email</string>
    <string name="fui_idp_name_facebook">Facebook</string>
    <string name="fui_idp_name_github">GitHub</string>
    <string name="interest">Interest*</string>
    <string name="month">Month</string>
    <string name="more_apps">More Apps</string>
    <string name="no">No</string>
    <string name="principl">Principal</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="rate_us">Rate Us</string>
    <string name="share_result">Share Result</string>
    <string name="share_the_app">Share the app</string>
    <string name="yes">Yes</string>
</resources>