<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="250.0dip"
    android:layout_height="320.0dip"
    android:layout_gravity="center"
    android:background="@drawable/mainlayout"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="25.0dip">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:layout_marginLeft="5.0dip"
        android:layout_marginTop="10.0dip"
        android:layout_marginRight="5.0dip"
        android:layout_weight="6.0"
        android:src="@drawable/nointernet" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10.0dip"
        android:fontFamily="@font/lato_medium"
        android:text="@string/connect_internet"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="16.0dip" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10.0dip"
        android:fontFamily="@font/lato_medium"
        android:text="@string/for_latest"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="13.0dip" />

    <Button
        android:id="@+id/cancel"
        android:layout_width="fill_parent"
        android:layout_height="40.0dip"
        android:layout_marginLeft="5.0dip"
        android:layout_marginTop="20.0dip"
        android:layout_marginRight="5.0dip"
        android:layout_marginBottom="15.0dip"
        android:background="@drawable/buttonshape"
        android:fontFamily="@font/open_sans"
        android:onClick="calculate"
        android:stateListAnimator="@null"
        android:text="@string/con"
        android:textColor="@color/cardview_light_background"
        android:textSize="15.0sp" />
</LinearLayout>