<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/pop_lay"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:animateLayoutChanges="true"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="15.0dip">

    <ImageView
        android:id="@+id/close"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_close_btn" />

    <LinearLayout
        android:layout_width="250.0dip"
        android:layout_height="330.0dip"
        android:layout_marginTop="20.0dip"
        android:background="@drawable/mainlayout"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="15.0dip">

        <LinearLayout
            android:id="@+id/rate"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1.0"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="8.0"
                android:src="@drawable/ic_baseline_star_24" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="10.0dip"
                android:layout_weight="1.0"
                android:fontFamily="@font/lato_medium"
                android:gravity="left"
                android:text="@string/rate_us"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="15.0sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/share"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginTop="0.0dip"
            android:layout_weight="1.0"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="8.0"
                android:src="@drawable/ic_baseline_share_24" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="10.0dip"
                android:layout_weight="1.0"
                android:fontFamily="@font/lato_medium"
                android:gravity="left"
                android:text="@string/share_the_app"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="15.0sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/more"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginTop="0.0dip"
            android:layout_weight="1.0"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="8.0"
                android:src="@drawable/ic_baseline_wrap_text_24" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="10.0dip"
                android:layout_weight="1.0"
                android:fontFamily="@font/lato_medium"
                android:gravity="left"
                android:text="@string/more_apps"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="15.0sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/privacy"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginTop="0.0dip"
            android:layout_weight="1.0"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="8.0"
                android:src="@drawable/ic_baseline_security_24" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="10.0dip"
                android:layout_weight="1.0"
                android:fontFamily="@font/lato_medium"
                android:gravity="left"
                android:text="@string/privacy_policy"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="15.0sp" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>